[gd_scene load_steps=2 format=3 uid="uid://dw3mi5o6jogas"]

[ext_resource type="Script" path="res://src/util/DBAcess.gd" id="1_mgcoa"]

[node name="DBAcess" type="Node"]
script = ExtResource("1_mgcoa")

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open File(s)"
size = Vector2i(600, 600)
mode = 2
ok_button_text = "Open"
file_mode = 1
access = 2
show_hidden_files = true

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 437.0
offset_bottom = 66.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Load"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="OpenImg" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "open img"

[node name="HFlowContainer" type="FlowContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_load_texture_from_db"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/OpenImg" to="." method="_pop_dialog"]
